--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btPanic"
-        android:layout_width="101dp"
+        android:layout_width="113dp"
         android:layout_height="52dp"
         android:layout_marginStart="160dp"
         android:layout_marginTop="560dp"
@@ -19,7 +19,7 @@
         android:text="Panic"
         android:textAlignment="center"
         android:textColor="#020202"
-        android:textSize="34sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -43,7 +43,7 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btStart"
-        android:layout_width="101dp"
+        android:layout_width="113dp"
         android:layout_height="52dp"
         android:layout_marginStart="160dp"
         android:layout_marginTop="392dp"
@@ -51,7 +51,7 @@
         android:elegantTextHeight="false"
         android:text="Start"
         android:textAlignment="center"
-        android:textSize="34sp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -71,7 +71,7 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btStop"
-        android:layout_width="101dp"
+        android:layout_width="113dp"
         android:layout_height="52dp"
         android:layout_marginStart="160dp"
         android:layout_marginTop="468dp"
@@ -79,7 +79,21 @@
         android:elegantTextHeight="false"
         android:text="Stop"
         android:textAlignment="center"
-        android:textSize="34sp"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/eTlocal"
+        android:layout_width="298dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="61dp"
+        android:layout_marginTop="284dp"
+        android:layout_marginEnd="52dp"
+        android:text="TextView"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
